[gd_scene load_steps=4 format=3 uid="uid://djgu0mrem5od8"]

[ext_resource type="Script" path="res://addons/object_creator/Scripts/InputScripts/dictionary_input.gd" id="1_5ibh3"]
[ext_resource type="Script" path="res://addons/object_creator/Scripts/UI-Scripts/data_type_option_button.gd" id="2_67gus"]
[ext_resource type="LabelSettings" uid="uid://c7ay5h8tbaidb" path="res://addons/object_creator/Assets/input_warning.tres" id="3_ptpvb"]

[node name="ArrayInput" type="VBoxContainer"]
anchors_preset = -1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_5ibh3")

[node name="AddElementSection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MinimizeButton" type="Button" parent="AddElementSection"]
layout_mode = 2
text = "  -  "

[node name="PropertyName" type="Label" parent="AddElementSection"]
layout_mode = 2

[node name="PropertyType" type="Label" parent="AddElementSection"]
layout_mode = 2
text = "Dictionary"

[node name="AddElementButton" type="Button" parent="AddElementSection"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 3.0
text = "Add Element"

[node name="ElementTypeButton" type="OptionButton" parent="AddElementSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource("2_67gus")

[node name="Warning" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Not all Inputs are valid"
label_settings = ExtResource("3_ptpvb")
horizontal_alignment = 1

[connection signal="pressed" from="AddElementSection/MinimizeButton" to="." method="_on_minimize_pressed"]
